# ComfyUI_Nano_Banana

./: .env.example  .env.vertexai.template  .gitignore  CHANGELOG.md  README.md  __init__.py  config.json.example  nano_banana_nodes.py  pyproject.toml  requirements.txt
core/: auth.py
nodes/: __init__.py  nano_banana_aio.py  nano_banana_grounding_nodes.py  nano_banana_multiturn_chat.py  nano_banana_nodes.py
utils/: image_utils.py
