[project]
name = "nano_banana"
description = "A set of custom nodes for ComfyUI that leverage the Gemini 2.5 Flash Image Preview API to generate images from text prompts, single images, and multiple images."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# requirements.txt", "# For loading the GOOGLE_API_KEY from your .env file", "python-dotenv", "# The official Google AI Python SDK.", "# We list this transitional package because it has proven to enforce the", "# correct versioning of its underlying dependencies (like google-generativeai)", "# during installation in this environment.", "google-generativeai", "google-genai", "# For image processing (PIL) to handle image data", "Pillow", "# --- Assumed Core Dependencies ---", "# These packages are typically required by the host application (e.g., ComfyUI)", "# and are listed here for completeness.", "# torch", "# numpy"]

[project.urls]
Repository = "https://github.com/ru4ls/ComfyUI_Nano_Banana"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ru4ls/ComfyUI_Nano_Banana/wiki"
"Bug Tracker" = "https://github.com/ru4ls/ComfyUI_Nano_Banana/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Nano_Banana"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

